# CBouncy

./: .gitignore  cbouncy.py  code_processor.py  configs.py  filemanager.py  generator.py  mail.py  mutator.py  optimize_options.py  oracle.py  oracle_pseudo.md  program_generator.py  program_tester.py  reduce.py  reducer.py  utils.py
bugs/bug1/: csmith_UStwOd.c  csmith_UStwOd_KVZmlR.c
bugs/bug2/: a.out  csmith_1FgQFh.c  csmith_1FgQFh_hOGHUE.c
bugs/bug3/: compile_log.txt  csmith_OOOMEo.c  csmith_OOOMEo_FGVdxh.c  csmith_OOOMEo_NwCsUz.c  outputs.txt  test
bugs/case_1714/: case_0.c  case_1.c  case_2.c  case_3.c  case_4.c  log  orig.c  reduced.c
dev/: cutter.py
mutate_strategy/: .gitignore  AddUnusedVar.cpp  AddUnusedVar.h  CMakeLists.txt  Mutator.cpp  RewriteUtils.cpp  RewriteUtils.h  add_unused_arrays.cpp
mutate_strategy/tests/: a.c  b.c
